--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Redressed&display=swap");
 body {
   margin: 0;
-  font-family: "Open Sans Hebrew", sans-serif;
+  font-family: "Open Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -25,9 +25,7 @@ code {
   height: 100%;
 }
 
-h1 {
-  font-family: 'Redressed', cursive;
-}
+
 
 .vinfo p {
   padding: 0;
