--- a/client/src/index.css
+++ b/client/src/index.css
@@ -39,3 +39,12 @@ span {
   cursor: pointer;
 }
 /*# sourceMappingURL=index.css.map */
+.flex{
+  display: flex;
+  justify-content: space-between;
+}
+.flex1{
+  display: flex;
+  flex-direction: column;
+  padding: auto;
+}
