--- a/client/src/index.css
+++ b/client/src/index.css
@@ -41,13 +41,32 @@ span {
 /*# sourceMappingURL=index.css.map */
 .flex{
   display: flex;
-  justify-content: center;
+  justify-content: space-between ;
+  padding: auto;
 }
 .flex1{
+
   display: flex;
   flex-direction: column;
   padding: auto;
   width: 30%;
 }
+.flex2{
+
+  display: grid;
+  grid-row: auto auto auto auto !important;
+  justify-content: space-between;
+}
 /* index.css */
 @import "~leaflet/dist/leaflet.css";
+*{
+  box-sizing: border-box;
+  
+}
+#root{
+  height: 100vh;
+}
+label{
+  color: blue;
+  
+}
